--- a/_posts/2007-10-24-new-theme.md
+++ b/_posts/2007-10-24-new-theme.md
@@ -1,12 +1,13 @@
 ---
-layout: default
+layout: post
 title: New Theme!
-permalink: /2007/10/new-theme.html
+permalink: /tech/new-theme.html
 redirect_from: "/2007/10/new-theme.html"
 date: Wed Oct 24 22:20:00 IST 2007
 sharingURL: http://blog.sangupta.com/2007/10/new-theme.html
 tags: blogger just-like-that my-projects
 ---
+
 <div align="justify">
     I am really glad to say that I have updated the theme, finally! It had been long since I had been planning to change the theme, and today it has arrived. I had earlier zeroed in on 
     <a href="http://azcarya.blogspot.com/2007/09/new-theme-soon-really-soon.html" title="Foliage In XML">Foliage</a>, but due to certain thoughts while restructuring my blogs, I wanted a cleaner and a wider template, that had a white background. Thoughts - yes, I have given a new meaning to Azcarya - a memoir of myself playing with the technology. It would now have lots of code snippets, and hence the white background.
