--- a/_posts/2009-11-25-evenstar.md
+++ b/_posts/2009-11-25-evenstar.md
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: post
 title: Evenstar!
-permalink: /2009/11/evenstar.html
+permalink: /tech/evenstar.html
 redirect_from: "/2009/11/evenstar.html"
 date: Wed Nov 25 17:32:00 IST 2009
 sharingURL: http://blog.sangupta.com/2009/11/evenstar.html
