changing layout and refactoring

--- a/_posts/2010-5-27-sparkle.md
+++ b/_posts/2010-5-27-sparkle.md
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: post
 title: Sparkle
-permalink: /2010/05/sparkle.html
+permalink: /tech/sparkle.html
 redirect_from: "/2010/05/sparkle.html"
 date: Thu May 27 21:53:00 IST 2010
 sharingURL: http://blog.sangupta.com/2010/05/sparkle.html
