mor final touches to each page/post

--- a/_posts/2007-10-24-new-theme.md
+++ b/_posts/2007-10-24-new-theme.md
@@ -8,28 +8,51 @@ sharingURL: http://blog.sangupta.com/2007/10/new-theme.html
 tags: blogger just-like-that my-projects
 ---
 
-<div align="justify">
-    I am really glad to say that I have updated the theme, finally! It had been long since I had been planning to change the theme, and today it has arrived. I had earlier zeroed in on 
-    <a href="http://azcarya.blogspot.com/2007/09/new-theme-soon-really-soon.html" title="Foliage In XML">Foliage</a>, but due to certain thoughts while restructuring my blogs, I wanted a cleaner and a wider template, that had a white background. Thoughts - yes, I have given a new meaning to Azcarya - a memoir of myself playing with the technology. It would now have lots of code snippets, and hence the white background.
-    <br>
-    <br>I took me the whole weekend to design the theme, particularly moving the widgets to hidden popups, and still remaining the Blogger's functionality. The theme consists of a width-free layout, completely CSS driven, and lots of AJAX snippets. All the widgets have been laid out at the top, and now open in a new popup window with the pleasing fade-in effect. Wanna check it out, 
+I am really glad to say that I have updated the theme, finally! It had been long 
+since I had been planning to change the theme, and today it has arrived. I had 
+earlier zeroed in on 
+<a href="http://azcarya.blogspot.com/2007/09/new-theme-soon-really-soon.html" title="Foliage In XML">Foliage</a>
+, but due to certain thoughts while restructuring my blogs, I wanted a cleaner 
+and a wider template, that had a white background. Thoughts - yes, I have given a 
+new meaning to Azcarya - a memoir of myself playing with the technology. It would 
+now have lots of code snippets, and hence the white background.
+
+I took me the whole weekend to design the theme, particularly moving the widgets 
+to hidden popups, and still remaining the Blogger's functionality. The theme consists of a 
+width-free layout, completely CSS driven, and lots of AJAX snippets. All the widgets have 
+been laid out at the top, and now open in a new popup window with the pleasing fade-in 
+effect. Wanna check it out, 
+
     <a href="javascript:void(0);" onclick="'$(">click here</a> to move to top, and check the widgets.
-    <br>
-    <br>If you like the theme, or you have any suggestions to improve upon, please let me know.
-    <br>
-    <br>
-    <span style="font-style:italic;">Update: 11 Oct 2007</span>
-    <br>Just added code syntax highlighting using the 
-    <a href="http://code.google.com/p/syntaxhighlighter" title="Syntax Highlighter">Syntax Highlighter</a>. A very fast and efficient way for client side rendering. The power of the script can be imagined that even Yahoo uses it on its official site. The best way for client side rendering.
-    <br>
-    <br>An example of classic HELLO WORLD!
-    <br>
-    <pre class="brush: java">public class Hello {<br>public static void main(String args[]) {<br>System.out.println("Hello World!");<br>}<br>}<br></pre>I have incorporated almost all features I had originally planned. Hurray! The theme code will come soon.
-    <br>
-    <br>
-    <span style="font-style:italic;">Update: 24 Oct 2007</span>
-    <br>Just released the initial version of the theme at 
-    <a href="http://azcarya.googlecode.com" title="Azcarya Google Code Repository">Azcarya Repository</a>. Also, fixed some minor issues.
-    <br>
-    <br>
-</div>
+
+If you like the theme, or you have any suggestions to improve upon, please let me know.
+
+Update: 11 Oct 2007
+-------------------
+
+Just added code syntax highlighting using the 
+<a href="http://code.google.com/p/syntaxhighlighter" title="Syntax Highlighter">Syntax Highlighter</a>. 
+A very fast and efficient way for client side rendering. The power of the script can be 
+imagined that even Yahoo uses it on its official site. The best way for client side rendering.
+
+An example of classic HELLO WORLD!
+
+```
+public class Hello {
+
+    public static void main(String args[]) {
+        System.out.println("Hello World!");
+    }
+
+}
+```
+
+I have incorporated almost all features I had originally planned. Hurray! The theme code will come soon.
+
+Update: 24 Oct 2007
+-------------------
+
+Just released the initial version of the theme at 
+<a href="http://azcarya.googlecode.com" title="Azcarya Google Code Repository">Azcarya Repository</a>. 
+
+Also, fixed some minor issues.
