fix more posts for markdown conversion

--- a/_posts/2009-11-25-evenstar.md
+++ b/_posts/2009-11-25-evenstar.md
@@ -7,23 +7,42 @@ date: Wed Nov 25 17:32:00 IST 2009
 sharingURL: http://blog.sangupta.com/2009/11/evenstar.html
 tags: evenstar my-projects
 ---
-<div align="justify">
-    Many of you who would be reading this post of mine would have some own blogging experience. Many amongst them would be avid bloggers. Some have their own personal blogs, where in, they put down everything that goes in through their hearts and not the mind. Few like me put in everything for we have no mind. And all of us has friends. Now, What do such mindless blogs and sage friends have in common?
-    <br>
-    <br>Well, sometimes our friends become our biggest foes. Sometimes, when their intelligence, loaded with sanity, soaked in logic, with a fragrance of reason, decorates our blog as a token of their liking, the blog owner's insanity turns insane. At times it leads to defeat the sole purpose of the post and turns off the very visitors whom you adore. To add appreciation to glory, if you try some legal ways (read as, settings in your favorite blog engine), these sage start expressing their wisdom vocally than in writing; at this point you only wish to be reborn.
-    <br>
-    <br>With such instances most of us wish if there was a way to bury such friends in the deep deserts of North Pole. Some turn to hibernate in the cool comfort of the Sahara Desert. Well, I tried doing both and failed. And now, the only thought up my mind is,
-    <br>
-    <br>
-    <blockquote>
-        <i>May it be an evening star,<br>Shines down upon you,<br>May it be when darkness falls,<br>Your heart will be true,<br>You walk a lonely road,<br>Oh! How far you are from home! (Enya)</i>
-    </blockquote>
-    <br>Being just another good for nothing person, I am using the power of primary language of expression to do believe in the above, waiting for the 
-    <b><i>evenstar</i></b> to shine down upon me soon! Till time, if I could remain as sane as my thoughts above, there would be more in here soon. Keep Watching the space!
-    <br>
-    <br>Keep Walking, Keep Hiding!
-    <br>
-    <br>
-    <i>PS: None-the-less, if anyone has suggestions on how to bury in the North Pole, please leave your comments, which would be highly appreciated and acknowledged with due respect. For those whose sanity is troubling them find an answer as to why I chose North pole, here is my insanity packaged in a line; I live in the northern hemisphere, and I don't want my friends to suffer (more) when I drag them to the pole.</i>
-    <br>
-</div>
+
+Many of you who would be reading this post of mine would have some own 
+blogging experience. Many amongst them would be avid bloggers. Some have 
+their own personal blogs, where in, they put down everything that goes in 
+through their hearts and not the mind. Few like me put in everything for 
+we have no mind. And all of us has friends. Now, What do such mindless blogs 
+and sage friends have in common?
+
+Well, sometimes our friends become our biggest foes. Sometimes, when their 
+intelligence, loaded with sanity, soaked in logic, with a fragrance of reason, 
+decorates our blog as a token of their liking, the blog owner's insanity turns 
+insane. At times it leads to defeat the sole purpose of the post and turns off 
+the very visitors whom you adore. To add appreciation to glory, if you try some 
+legal ways (read as, settings in your favorite blog engine), these sage start 
+expressing their wisdom vocally than in writing; at this point you only wish 
+to be reborn.
+
+With such instances most of us wish if there was a way to bury such friends 
+in the deep deserts of North Pole. Some turn to hibernate in the cool comfort 
+of the Sahara Desert. Well, I tried doing both and failed. And now, the only 
+thought up my mind is,
+
+> May it be an evening star,
+> Shines down upon you,
+> May it be when darkness falls,
+> Your heart will be true,
+> You walk a lonely road,
+> Oh! How far you are from home! (Enya)
+
+Being just another good for nothing person, I am using the power of primary 
+language of expression to do believe in the above, waiting for the `evenstar` to 
+shine down upon me soon! Till time, if I could remain as sane as my thoughts above, 
+there would be more in here soon. Keep Watching the space!
+
+`PS:` None-the-less, if anyone has suggestions on how to bury in the North Pole, please 
+leave your comments, which would be highly appreciated and acknowledged with due respect. 
+For those whose sanity is troubling them find an answer as to why I chose North pole, here 
+is my insanity packaged in a line; I live in the northern hemisphere, and I don't want 
+my friends to suffer (more) when I drag them to the pole.
