fix more posts for markdown conversion

--- a/_posts/2010-3-26-tid-bits.md
+++ b/_posts/2010-3-26-tid-bits.md
@@ -3,10 +3,8 @@ layout: post
 permalink: /poetry/tid-bits.html
 redirect_from: "/2010/03/tid-bits.html"
 category: poetry
+title: Tid Bits
 ---
-
-Tid Bits
---------
 
 _One fine day, a friend wrote, *Tomorrow will be bright and will bring new light...* and started it all!_
 
