--- a/_posts/2010-5-27-sparkle.md
+++ b/_posts/2010-5-27-sparkle.md
@@ -7,31 +7,32 @@ date: Thu May 27 21:53:00 IST 2010
 sharingURL: http://blog.sangupta.com/2010/05/sparkle.html
 tags: adobe-air my-projects
 ---
-<img src="http://static.sangupta.com/sparkle/sparkle.png" align="left">Sparkle is an Adobe AIR application for code highlighting. It does not depend on any webservice, and hence, can be used in offline mode as well. Sparkle uses awesome 
-<a href="http://alexgorbatchev.com/wiki/SyntaxHighlighter">Syntax Highlighter</a> by 
-<a href="http://alexgorbatchev.com/">Alex Gorbatchev</a>. You can think of Sparkle as a UI front end for Syntax Highlighter.
-<br>
-<br>Sparkle was born of the need to display syntax highlighted code when
-<br>
-<br>
-<ul>
-    <li>it is difficult/impossible to include Javascript in the HTML page</li>
-    <li>one rarely paste code snippets and the does not wants to compromise on page load times</li>
-    <li>display code snippets in RSS feeds</li>
-</ul>
-<br>Using Sparkle is damn easy,
-<br>
-<ol>
-    <li>Run Sparkle</li>
-    <li>Paste your code snippet in the text area</li>
-    <li>Choose code language and theme</li>
-    <li>Click on Convert</li>
-</ol>That simple. Move to the Get HTML Code tab and click on Copy HTML to Clipboard. You may need to include the given style sheets somewhere in your HTML code.
-<br>
-<br>
+<img src="http://static.sangupta.com/sparkle/sparkle.png" align="left">
+Sparkle is an Adobe AIR application for code highlighting. It does not depend 
+on any webservice, and hence, can be used in offline mode as well. Sparkle uses 
+awesome <a href="http://alexgorbatchev.com/wiki/SyntaxHighlighter">Syntax Highlighter</a> by 
+<a href="http://alexgorbatchev.com/">Alex Gorbatchev</a>. You can think of Sparkle 
+as a UI front end for Syntax Highlighter.
+
+Sparkle was born of the need to display syntax highlighted code when
+
+* it is difficult/impossible to include Javascript in the HTML page
+* one rarely paste code snippets and the does not wants to compromise on page load times
+* display code snippets in RSS feeds
+
+Using Sparkle is damn easy,
+
+* Run Sparkle
+* Paste your code snippet in the text area
+* Choose code language and theme
+* Click on Convert
+
+That simple. Move to the Get HTML Code tab and click on Copy HTML to Clipboard. You may 
+need to include the given style sheets somewhere in your HTML code.
+
 <a href="http://code.google.com/p/sangupta/wiki/Sparkle">Home Page</a>&nbsp;|&nbsp;
 <a href="http://sangupta.googlecode.com/files/Sparkle.air">Download</a>&nbsp;|&nbsp;Source (coming soon!)
-<br>
-<br>Sparkle needs Adobe AIR 1.5 Runtime on Windows, Mac or Linux.
-<br>
-<br>Happy Coloring!
+
+Sparkle needs Adobe AIR 1.5 Runtime on Windows, Mac or Linux.
+
+Happy Coloring!
