add read more breaks in posts

--- a/_posts/2011-11-17-luhny-bin.md
+++ b/_posts/2011-11-17-luhny-bin.md
@@ -14,6 +14,8 @@ was not before a day has passed that I could get to know of the problem and try 
 it. The delay being attributed to absence of `Cygwin` on my Windows machine which was needed 
 to run the test harness (refer original post on details).
 
+<!-- break here -->
+
 Yesterday, I spent most of my time first trying to get the harness running without using `Cygwin`. The 
 solution was a bit tricky as I had to figure out how the test harness was actually running. Anyhow, 
 my solution is available at 
