adding details for all projects and experiments

--- a/projects/s3.md
+++ b/projects/s3.md
@@ -1,8 +1,20 @@
 ---
-layout: default
+layout: project
 title: S3
 github: s3
 ---
 
-<h1>S3</h1>
+Command line interface to interact with Amazon S3. The idea is to be able to perform
+all S3 commands using the command-line as browser access is limited on Linux virtual
+machines.
 
+### Similar Projects
+
+One similar project I know of is `s3cmd` from http://s3tools.org. One major drawback
+of the tool is the non-availability on Windows platform. Another minor disadvantage,
+may be not for everyone, is the dependency on `python` for execution. And that too an
+incompatibility with `python 3`.
+
+### License
+
+The library is released under the terms of **Apache Public License Version 2**.
